# NesEmulator

./: .clang-format  .gitignore  Bus.cpp  Bus.h  CMakeLists.txt  Cartridge.cpp  Cartridge.h  Cpu.cpp  Cpu.h  Emulator.cpp  Emulator.h  EmulatorWindow.cpp  EmulatorWindow.h  Mapper.cpp  Mapper.h  Mapper0.cpp  Mapper0.h  NesFile.cpp  PPU.cpp  PPU.h  README.md  build.ps1  conanfile.txt  literals.h  main.cpp
.github/workflows/: ci.yml
helper/: temp  temp.py
include/NesEmulator/nes/: Bus.h  CPU.h  Cartridge.h  Joypad.h  Mapper.h  Mapper0.h  Mapper1.h  Mapper2.h  Mapper3.h  Mapper4.h  Mirroring.h  NesFile.h  PPU.h  literals.h
include/NesEmulator/pixel_engine/: EBO.h  Pixel.h  PixelEngine.h  Shader.h  Texture.h  VAO.h  VBO.h
include/audio_maker/: AudioMaker.h
include/nes/: APU.h  Bus.h  CPU.h  Cartridge.h  Mapper.h  Mirroring.h  NesFile.h  PPU.h  literals.h
include/nes/APU/: DMC.h  Envelope.h  LengthCounter.h  Noise.h  Pulse.h  StatusRegister.h  Sweep.h  Timer.h  Triangle.h
include/nes/Mapper/: Mapper0.h  Mapper1.h  Mapper2.h  Mapper3.h  Mapper4.h
include/pixel_engine/: EBO.h  Pixel.h  PixelEngine.h  Shader.h  TaskQueue.h  VBO.h
scripts/: count_ines_mapper.py  download_nes_files.py  gen_glfw_key_map.py  gen_optable.py  gen_palette.py
src/: CMakeLists.txt  Emulator.cpp  Emulator.h  EmulatorWindow.cpp  main.cpp  show_tiles.cpp
src/audio_maker/: AudioMaker.cpp  CMakeLists.txt
src/nes/: APU.cpp  Bus.cpp  CMakeLists.txt  CPU.cpp  Cartridge.cpp  Joypad.cpp  Mapper.cpp  Mapper0.cpp  Mapper1.cpp  Mapper2.cpp  Mapper3.cpp  Mapper4.cpp  Mirroring.cpp  NesFile.cpp  PPU.cpp  literals.cpp
src/nes/APU/: DMC.cpp  Envelope.cpp  LengthCounter.cpp  Noise.cpp  Pulse.cpp  StatusRegister.cpp  Sweep.cpp  Timer.cpp  Triangle.cpp
src/nes/Mapper/: Mapper0.cpp  Mapper1.cpp  Mapper2.cpp  Mapper3.cpp  Mapper4.cpp
src/pixel_engine/: CMakeLists.txt  EBO.cpp  Pixel.cpp  PixelEngine.cpp  Shader.cpp  TaskQueue.cpp  Texture.cpp  VAO.cpp  VBO.cpp
src/pixel_engine/shaders/: default.frag  default.vert
test/: CMakeLists.txt  nestest.txt  testAudioMaker.cpp  testCPU.cpp  testCpu.cpp  testSleep.cpp
